[gd_scene load_steps=8 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Mob.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://art/house-in-a-forest-loop.ogg" type="AudioStream" id=5]
[ext_resource path="res://art/game-over.wav" type="AudioStream" id=6]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -80, -80, 0, 0, 0, 0, 560, -80, 0, 0, 0, 0, 560, 800, 0, 0, 0, 0, -80, 800, 0, 0, 0, 0, -80, -80 )
}

[node name="Main" type="Node"]
script = ExtResource( 1 )
mob_scene = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.219608, 0.372549, 0.376471, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MobSpawnPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="SpawnLocationFinder" type="PathFollow2D" parent="MobSpawnPath"]
position = Vector2( -80, -80 )
rotation = -1.95219e-06

[node name="MusicBeatTimer" type="Timer" parent="."]
wait_time = 0.42

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 240, 360 )

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[connection signal="timeout" from="MusicBeatTimer" to="." method="_on_MusicBeat"]
[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
[connection signal="finished" from="Music" to="." method="refreshMobTimer"]
